--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "eslint": "5.16.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sails-disk": "^2.1.1"
   },
   "scripts": {
     "start": "nodemon app.js",
