commit controler,model-orm , helper- validatet;

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "@sailshq/lodash": "^3.10.3",
+    "argon2": "^0.28.5",
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
