--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@sailshq/lodash": "^3.10.3",
     "argon2": "^0.28.5",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^2.0.0",
