--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,17 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/lodash": "^3.10.4",
+    "amqplib": "^0.8.0",
     "argon2": "^0.28.5",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "sails": "^1.5.2",
-    "sails-hook-orm": "^4.0.0",
-    "sails-hook-sockets": "^2.0.0",
+    "sails-hook-orm": "^4.0.1",
+    "sails-hook-sockets": "^2.0.1",
     "sails-mysql": "^2.0.0",
-    "sails-postgresql": "^4.0.0"
+    "sails-postgresql": "^4.0.0",
+    "sails-rabbitmq": "^0.11.1"
   },
   "devDependencies": {
     "eslint": "5.16.0",
