commit rabbitmq source

--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,8 @@
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.1",
     "sails-hook-sockets": "^2.0.1",
-    "sails-mysql": "^2.0.0",
-    "sails-postgresql": "^4.0.0",
-    "sails-rabbitmq": "^0.11.1"
+    "sails-mongo": "^2.0.0",
+    "sails-postgresql": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "5.16.0",
