--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "argon2": "^0.28.5",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
+    "redis": "^4.0.6",
     "sails": "^1.5.2",
     "sails-hook-orm": "^4.0.1",
     "sails-hook-sockets": "^2.0.1",
