--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "sails-hook-orm": "^4.0.1",
     "sails-hook-sockets": "^2.0.1",
     "sails-mongo": "^2.0.0",
-    "sails-postgresql": "^4.0.0"
+    "sails-postgresql": "^4.0.0",
+    "sails-redis": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "5.16.0",
